<resources>
    <string name="app_name" translatable="false">Prueba tecnica - InterRapidisimo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="usuario">User: </string>
    <string name="identificacion">Identification: </string>
    <string name="nombre">Name: </string>
    <string name="new_version_local">The local version is newer</string>
    <string name="new_version">There is a version of the app available</string>
    <string name="accept">Accept</string>
    <string name="update_data">Update data</string>
    <string name="localities">Localities</string>
    <string name="tables">Tables</string>
    <string name="back">Back</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="name_compl">Name complete</string>
    <string name="interrapidisimo_technical_test">InterRapidisimo technical test</string>
    <string name="technical_test">Technical Test</string>
</resources>